# deep-research-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: plugin.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
docs/: environment.md  pipeline-findings.md
docs/contracts/: knowledge-compiler.md  okf-frontmatter.md  pdf-ingestion-pipeline.md  schema-versions.md
docs/decisions/: 0001-architecture.md  0002-knowledge-compiler.md
eval-results/: RECIPE-B-PROMOTION-VERDICT.md  baseline.json  promote-baseline-gemma4-e4b.json  promote-candidate-recipe-b-v1.json  run-20260709T044959Z.json
scripts/: _merge_recipe_b.py  _migrate_gold_to_spans.py  assemble-sft.py  build-pooled-gold.py  build-sft-dataset.py  build_promotion_reports.py  check-eval-corpus.py  check-manifests-in-sync.py  check-skill-templates-in-sync.py  eval-pipeline.py  promote.py  serve_adapter.py  sync-skill-templates.py  train_recipe_b.py  validate-gguf-tokens.py  validate-local-llm.py
sft-final/: manifest.json
sft-final/provenance/: recipe-b-v1.MERGE_STATUS.txt  recipe-b-v1.run.json
skills/canonical-markdown-to-llm-nodes/: SKILL.md
skills/knowledge-extraction/: SKILL.md
skills/llm-wiki-writer/: SKILL.md
skills/pdf-ingest-router/: SKILL.md
skills/rag-eval-harness/: SKILL.md
skills/research-knowledge-graph/: SKILL.md
skills/retrieval-planner/: SKILL.md
src/deep_research_toolkit/: __init__.py  cli.py  config.py
tests/fixtures/: make_test_pdf.py
tests/integration/: test_compile_cli.py  test_full_compiler_pipeline.py  test_full_pdf_pipeline.py  test_query_cli.py
tests/live/: conftest.py  test_canaries.py
tests/unit/: test_build_pooled_gold.py  test_build_sft_dataset_script.py  test_claims_check.py  test_cli.py  test_common_hashing.py  test_compiler_build.py  test_compiler_contradictions.py  test_compiler_dossier.py  test_compiler_embed.py  test_compiler_graph.py  test_compiler_ingest.py  test_compiler_schema.py  test_compiler_search.py  test_compiler_search_empty.py  test_compiler_tools.py  test_config.py  test_dependency_boundary.py  test_embed_match.py  (+39 more)
training-corpus/: corpus-index.json
(+235 files in other folders)
